package main;

message Command {
	required int32 id = 1;
	optional ConnectCommand connectCommand = 2;
	optional ServerMessage serverMessage = 3;
	optional StatusMessage statusMessage = 4;
	optional Handshake handshake = 5;
}

message ConnectCommand {
	required string sessionid = 1;
	required string server = 2;
	required uint32 port = 3;
	optional bool ssl = 4;
}

message ServerMessage {
	required string server = 1;
	required string msg = 2;
}

message StatusMessage {
	required string msg = 1;
	required int32 msgtype = 2;
	optional int32 statuscode = 3;
}

message Handshake {
	required string sessionid = 1;
	optional string username = 2;
	optional string password = 3;
}